--- a/WebtekFinalsProject/lib/nblibraries.properties
+++ b/WebtekFinalsProject/lib/nblibraries.properties
@@ -2,6 +2,11 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
+libs.JAVADB_DRIVER_LABEL.classpath=\
+    ${base}/JAVADB_DRIVER_LABEL/derby.jar;\
+    ${base}/JAVADB_DRIVER_LABEL/derbyclient.jar;\
+    ${base}/JAVADB_DRIVER_LABEL/derbynet.jar
+libs.JAVADB_DRIVER_LABEL.displayName=Java DB Driver
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
@@ -9,3 +14,14 @@ libs.javaee-endorsed-api-6.0.classpath=\
 libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee-doc-api.jar
+libs.jstl.classpath=\
+    ${base}/jstl/jstl-impl.jar;\
+    ${base}/jstl/jstl-api.jar
+libs.jstl.displayName=JSTL 1.2.2
+libs.jstl.javadoc=\
+    ${base}/jstl/javaee-doc-api.jar
+libs.jstl.prop-maven-dependencies=\n                javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1:jar\n                org.glassfish.web:javax.servlet.jsp.jstl:1.2.2:jar\n            
+libs.MySQLDriver.classpath=\
+    ${base}/MySQLDriver/mysql-connector-java-5.1.23-bin.jar
+libs.MySQLDriver.displayName=MySQL JDBC Driver
+libs.MySQLDriver.prop-maven-dependencies=mysql:mysql-connector-java:5.1.23:jar
